--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
 				<section>
 					<section>What is a Raspberry Pi?</section>
 					<section><img src="https://raw.githubusercontent.com/SeeedDocument/Raspberry-Pi-4/master/img/hardware-overview-1400.jpg">Hardware Overview</img></section>
+					<section data-transition="slide" data-background-transition="zoom">
+					<img src="/static/make.png">Projects are found all over the internet</img></section></section>
 				</section>
 				<section>
-					<section>
-					<img src="https://drive.google.com/file/d/1RZSOAi2JBn4uyxF2TSuqxEIdDq1NTFJr/view?usp=sharing">Projects are found all over the internet</img></section>
 					<section>Raspbian OS</section>
-					<section>Basic Terminal Commands</section>
+					<section>Terminal Commands</section>
+					<section>
+					Ctrl-Alt-T to launch the terminal
+					<img src="/static/terminal.jfif"></img>
+					<p>Alternatively, click on the logo</p>
+					</section>
+					<section id="fragments">
+
+					<pre class="fragment"><code class="Terminal">ls</code>(List) This code shows you which directory you are in</pre>
+					<pre class="fragment"><code class="Terminal">cd</code>Use this code to navigate to another directory</pre>
+					<pre class="fragment"><code class="Terminal">cd Documents</code>Navigating to the "Documents Directory" </pre>
+					
+					</section>
 				</section>
 				<section>
 					<section>Open CV</section>
