--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ Documentation shows the function parameters
           </section>
           <section>
             <div class="alert alert-info" role="alert">Does anybody know where this place is?</div>
-            <img src="..static/canny_edge/EdgeDunmanHigh.png">
+            <img src="static/canny_edge/EdgeDunmanHigh.png">
           </section>
           <section>
             <ol>
