--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
 					  <pre class="fragment"><code class="language-bash Terminal">cd Documents</code>Navigating to the "Documents Directory" </pre>
 					  <pre class="fragment"><code class="language-bash Terminal">cd ..</code>Navigating out of the current directory</pre>
 					</section>
+
+
+				<!--section id="fragments">
+					<div style="background-color: #006699; padding: 10px; border-top: 10px solid #b3ccff;">
+        	<p style="font-size: 1em; color:#ffffff">Installing Jupyter Notebook</p>
+        	</div>
+        	<div class="fragment">
+					<pre style='background-color: #666699; color:#ffffff; border-left: 8px solid #3d3d5c; padding: 4px; white-space: pre-wrap;'><code class="language-python Terminal" style="white-space: pre-line;">pip install jupyterlab</code>Installing of Jupyter Notebook!</pre></div>
+			
+				</section-->	
 				<section id="fragments">
 					<div style="background-color: #006699; padding: 10px; border-top: 10px solid #b3ccff;">
         	<p style="font-size: 1em; color:#ffffff">Installing OpenCV</p>
@@ -367,16 +377,52 @@ print(x)</code>20</pre>
               <p style="font-size: 2.1em; color:#ffffff;">Learning GUI features for the trackbar </p>
             </div></section>
 					<section>
-            <p>Importing essential modules</p>
-            <pre><code class="language-python" style="white-space: pre-line;">import numpy as np
-              import cv2
-              from matplotlib import pyplot as plt
-            </code></pre>
-            <pre style='background-color: #e7f3fe; border-left: 6px solid #2196F3; padding: 4px; white-space: pre-wrap;'  class="fragment"> &#128712; What are these for? Not all are needed now<ul>
-              <li>Numpy is a useful mathematical library that allows us to <br/>work easier with the large array of pixel information.</li>
-              <li>cv2 contans useful functions whose algorithms are efficient in processing images and video.</li>
-              <li>Matplotlib is a graph-plotting library for us to better <br/>visualize data.</li></ul></pre>
-          </section>
+                        <p>Importing essential modules</p>
+                        <pre><code class="language-python" style="white-space: pre-line;">import numpy as np
+                        import cv2
+                        </code></pre>
+                        <pre style='background-color: #e7f3fe; border-left: 6px solid #2196F3; padding: 4px; white-space: pre-wrap;'  class="fragment"> &#128712; What are these for? Not all are needed now<ul>
+                        <li>Numpy is a useful mathematical library that allows us to <br/>work easier with the large array of pixel information.</li>
+                        <li>cv2 contans useful functions whose algorithms are efficient in processing images and video.</li>
+                    </section>
+                    <section>
+                        <section>
+                            <p style="font-size: 1.2em">Creating the trackbars</p>
+                            <div class="fragment">Create a window with set width and height:
+                            <pre><code class="language-python Terminal" data-line-numbers>frame = np.zeros((312, 500, 3), np.uint8)
+cv2.namedWindow('trackbar')</code></pre>
+                            <pre style='background-color: #e7f3fe; border-left: 6px solid #2196F3; padding: 4px;'> &#128712; </pre>
+                            </div>
+                            <div class="fragment">
+                            Create 6 trackbars for hue, saturation and value
+                            <pre><code class="language-python Terminal" data-line-numbers>cv2.createTrackbar('lowH','trackbar',0,179,nothing)
+cv2.createTrackbar('highH','trackbar',179,179,nothing)
+
+cv2.createTrackbar('lowS','trackbar',0,255,nothing)
+cv2.createTrackbar('highS','trackbar',255,255,nothing)
+
+cv2.createTrackbar('lowV','trackbar',0,255,nothing)
+cv2.createTrackbar('highV','trackbar',255,255,nothing)</code></pre>
+                            </div>
+                        </section>
+                    </section>
+                    <section>
+                        <section>
+                            <p style="font-size: 1.2em">Getting trackbar position</p>
+                            <div class="fragment">Create a window with set width and height:
+                            <pre><code class="language-python Terminal" data-line-numbers>#cv2.getTrackbarPos(trackbar_label, trackbar_window)
+cv2.getTrackbarPos('lowH','trackbar')</code></pre>
+                            <pre style='background-color: #e7f3fe; border-left: 6px solid #2196F3; padding: 4px;'> &#128712; </pre>
+                            </div>
+                            <div class="fragment">
+                            Get the hsv values for lower and upper bound
+                            <pre><code class="language-python Terminal" data-line-numbers>  h = cv2.getTrackbarPos('lowH','trackbar')
+    s = cv2.getTrackbarPos('lowS','trackbar')
+    v = cv2.getTrackbarPos('lowV','trackbar')
+    low(or high) = np.array([h,s,v])</code></pre>
+                            </div>
+                        </section>
+                    </section>
 
 					
 				</section>
@@ -607,6 +653,9 @@ plt.close() # to close histogram</code></pre>
 					<section data-transition="zoom">
 						<img src="static/sgr.png"></img>
 						<p>Using a similar histogram idea, we can isolate a prominent colour with a mask</p>
+					</section>
+					<section data-transition="zoom">
+						<img src="static/color_process.jpg"></img>
 					</section>
 					<section>
 						<div class="alert alert-danger" role="alert">The following pieces of code are inside the while loop</div>
