--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ low(or high) = np.array([h,s,v])</code></pre>
                             <img src="hsv.png" height="470px">
                         </div>
                     </section>
-                    <section data-background-iframe="http://hslpicker.com/">
+                    <section data-background-iframe="http://hslpicker.com/" data-background-interactive>
                     </section>
                     <section>
                         <p style="font-size: 1.2em">Process the Data</p>
@@ -696,7 +696,7 @@ low(or high) = np.array([h,s,v])</code></pre>
                         </div>
                         <div class="fragment"><img style="border:0;" src="static/thinking.png" height="400px" width="400px"></div>
                     </section>
-                    <section data-background-image="static/diagrams.jpg">
+                    <section data-background-image="static/bitwise.jpg">
 
                     </section>
                     <section>
@@ -739,7 +739,7 @@ cv2.destroyAllWindows()
 						<img src="static/sgr.png"></img>
 						<p>Using a similar histogram idea, we can isolate a prominent colour with a mask</p>
 					</section>
-					<section data-background="static/color_process.jpg">
+					<section data-background="static/contours.jpg">
 					</section>
 					<section>
 						<div class="alert alert-danger" role="alert">The following pieces of code are inside the while loop</div>
