--- a/index.html
+++ b/index.html
@@ -447,9 +447,6 @@ print(x)</code>20</pre>
 						<p>open files/live webcam video</p>
             <p>display image/video histograms</p>
           </section>
-          
-          <section data-background-iframe="https://docs.opencv.org/3.4/d1/db7/tutorial_py_histogram_begins.html" data-background-interactive>
-          </section>
 					
           <section>
 						Two ways to analyse pixel data of image(s):
@@ -463,6 +460,9 @@ print(x)</code>20</pre>
               <p>Accepting image file using OpenCV</p>
               <pre><code class="language-python Terminal" style="white-space: pre-line;">cap = cv2.imread("image.png", 0)</code></pre>
             </div>
+          </section>
+
+					<section data-background-iframe="https://docs.opencv.org/3.4/d1/db7/tutorial_py_histogram_begins.html" data-background-interactive>
           </section>
 
           <section>
@@ -668,10 +668,10 @@ low(or high) = np.array([h,s,v])</code></pre>
                         <P>What is HSV/HSL?</P>
                         <div style="background-color: #00b386; padding: 15px; border-left: 34px solid #66ffd9; font-size: 0.8em;">HSV is just another format to represent colours, like RGB</div>
                         <div class="fragment">
-                            <img src="hsv.png" height="470px">
+                            <img src="static/hsv.png" height="470px">
                         </div>
                     </section>
-                    <section data-background-iframe="http://hslpicker.com/" data-background-interactive>
+                    <section data-background-iframe="https://alloyui.com/examples/color-picker/hsv" data-background-interactive>
                     </section>
                     <section>
                         <p style="font-size: 1.2em">Process the Data</p>
@@ -698,6 +698,9 @@ low(or high) = np.array([h,s,v])</code></pre>
                     </section>
                     <section data-background-image="static/bitwise.jpg">
 
+                    </section>
+                    <section>
+                        <img src="static/matrix.gif" height="650px" width="1200px">
                     </section>
                     <section>
                         Convert the image back to BGR format
