--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ low(or high) = np.array([h,s,v])</code></pre>
                             <pre><code class="language-python Terminal" data-line-numbers>mask = cv2.inRange(frame, low, high)</code></pre>
                         </div>
                         <div class="fragment">
-                            Apply the mask :D
+                            Apply the mask
                             <pre><code class="language-python Terminal" data-line-numbers>res = cv2.bitwise_and(frame, frame, mask=mask)</code></pre>
                         </div>
                     </section>
