renamed to trackbar

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ plt.gca().set_ylim([0, numpix])</code></pre></div>
 				<!--Trackbar-->
 				<section>
 				<section><div style="background-color: #00b386; padding: 15px; border-left: 34px solid #66ffd9;">
-                <p style="font-size: 2.1em; color:#ffffff;">Learning GUI features for the trackbar </p>
+                <p style="font-size: 2.1em; color:#ffffff;">Trackbars </p>
                 <button id="toggleTrackbar" style="background: #007acc; color: white; border-radius: 30px; margin: 0 auto;">Concepts covered</button>
                     <br />
                     <ul id="trackbarContents" style="display: none">
